lldb-eval/parser.cc
// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

#include "lldb-eval/parser.h"

#include <stdlib.h>

#include <cstdint>
#include <memory>
#include <sstream>
#include <string>
#include <tuple>
#include <type_traits>
#include <vector>

#include "clang/Basic/Diagnostic.h"
#include "clang/Basic/LangOptions.h"
#include "clang/Basic/SourceManager.h"
#include "clang/Basic/TargetInfo.h"
#include "clang/Basic/TargetOptions.h"
#include "clang/Basic/TokenKinds.h"
#include "clang/Lex/HeaderSearch.h"
#include "clang/Lex/HeaderSearchOptions.h"
#include "clang/Lex/LiteralSupport.h"
#include "clang/Lex/ModuleLoader.h"
#include "clang/Lex/Preprocessor.h"
#include "clang/Lex/PreprocessorOptions.h"
#include "clang/Lex/Token.h"
#include "lldb-eval/ast.h"
#include "lldb-eval/defines.h"
#include "lldb-eval/value.h"
#include "lldb/API/SBType.h"
#include "lldb/API/SBValue.h"
#include "llvm/ADT/APFloat.h"
#include "llvm/ADT/APInt.h"
#include "llvm/ADT/iterator_range.h"
#include "llvm/Support/FormatAdapters.h"
#include "llvm/Support/FormatVariadic.h"
#include "llvm/Support/Host.h"

namespace {

const char* kInvalidOperandsToUnaryExpression =
    "invalid argument type '{0}' to unary expression";

const char* kInvalidOperandsToBinaryExpression =
    "invalid operands to binary expression ('{0}' and '{1}')";

const char* kValueIsNotConvertibleToBool =
    "value of type '{0}' is not contextually convertible to 'bool'";

void StringReplace(std::string& str, const std::string& old_value,
                   const std::string& new_value) {
  size_t pos = str.find(old_value);
  if (pos != std::string::npos) {
    str.replace(pos, old_value.length(), new_value);
  }
}

template <typename T>
constexpr unsigned type_width() {
  return static_cast<unsigned>(sizeof(T)) * CHAR_BIT;
}

inline void TokenKindsJoinImpl(std::ostringstream& os,
                               clang::tok::TokenKind k) {
  os << "'" << clang::tok::getTokenName(k) << "'";
}

template <typename... Ts>
inline void TokenKindsJoinImpl(std::ostringstream& os, clang::tok::TokenKind k,
                               Ts... ks) {
  TokenKindsJoinImpl(os, k);
  os << ", ";
  TokenKindsJoinImpl(os, ks...);
}

template <typename... Ts>
inline std::string TokenKindsJoin(clang::tok::TokenKind k, Ts... ks) {
  std::ostringstream os;
  TokenKindsJoinImpl(os, k, ks...);

  return os.str();
}

std::string FormatDiagnostics(const clang::SourceManager& sm,
                              const std::string& message,
                              clang::SourceLocation loc) {
  // Get the source buffer and the location of the current token.
  llvm::StringRef text = sm.getBufferData(sm.getFileID(loc));
  size_t loc_offset = sm.getCharacterData(loc) - text.data();

  // Look for the start of the line.
  size_t line_start = text.rfind('\n', loc_offset);
  line_start = line_start == llvm::StringRef::npos ? 0 : line_start + 1;

  // Look for the end of the line.
  size_t line_end = text.find('\n', loc_offset);
  line_end = line_end == llvm::StringRef::npos ? text.size() : line_end;

  // Get a view of the current line in the source code and the position of the
  // diagnostics pointer.
  llvm::StringRef line = text.slice(line_start, line_end);
  int32_t arrow = sm.getPresumedColumnNumber(loc);

  // Calculate the padding in case we point outside of the expression (this can
  // happen if the parser expected something, but got EOF).
  size_t expr_rpad = std::max(0, arrow - static_cast<int32_t>(line.size()));
  size_t arrow_rpad = std::max(0, static_cast<int32_t>(line.size()) - arrow);

  return llvm::formatv("{0}: {1}\n{2}\n{3}", loc.printToString(sm), message,
                       llvm::fmt_pad(line, 0, expr_rpad),
                       llvm::fmt_pad("^", arrow - 1, arrow_rpad));
}

std::tuple<lldb::BasicType, bool> PickIntegerType(
    const clang::NumericLiteralParser& literal, const llvm::APInt& value) {
  unsigned int_size = type_width<int>();
  unsigned long_size = type_width<long>();
  unsigned long_long_size = type_width<long long>();

  // Binary, Octal, Hexadecimal and literals with a U suffix are allowed to be
  // an unsigned integer.
  bool unsigned_is_allowed = literal.isUnsigned || literal.getRadix() != 10;

  // Try int/unsigned int.
  if (!literal.isLong && !literal.isLongLong && value.isIntN(int_size)) {
    if (!literal.isUnsigned && value.isIntN(int_size - 1)) {
      return {lldb::eBasicTypeInt, false};
    }
    if (unsigned_is_allowed) {
      return {lldb::eBasicTypeUnsignedInt, true};
    }
  }
  // Try long/unsigned long.
  if (!literal.isLongLong && value.isIntN(long_size)) {
    if (!literal.isUnsigned && value.isIntN(long_size - 1)) {
      return {lldb::eBasicTypeLong, false};
    }
    if (unsigned_is_allowed) {
      return {lldb::eBasicTypeUnsignedLong, true};
    }
  }
  // Try long long/unsigned long long.
  if (value.isIntN(long_long_size)) {
    if (!literal.isUnsigned && value.isIntN(long_long_size - 1)) {
      return {lldb::eBasicTypeLongLong, false};
    }
    if (unsigned_is_allowed) {
      return {lldb::eBasicTypeUnsignedLongLong, true};
    }
  }

  // If we still couldn't decide a type, we probably have something that does
  // not fit in a signed long long, but has no U suffix. Also known as:
  //
  //  warning: integer literal is too large to be represented in a signed
  //  integer type, interpreting as unsigned [-Wimplicitly-unsigned-literal]
  //
  return {lldb::eBasicTypeUnsignedLongLong, true};
}

}  // namespace

namespace lldb_eval {

static bool TokenEndsTemplateArgumentList(const clang::Token& token) {
  // Note: in C++11 ">>" can be treated as "> >" and thus be a valid token
  // for the template argument list.
  return token.isOneOf(clang::tok::comma, clang::tok::greater,
                       clang::tok::greatergreater);
}

static lldb::SBType DoIntegralPromotion(lldb::SBTarget target, Type from) {
  assert((from.IsInteger() || from.IsUnscopedEnum()) &&
         "Integral promotion works only for integers and unscoped enums.");

  // Don't do anything if the type doesn't need to be promoted.
  if (!from.IsPromotableIntegerType()) {
    return from;
  }

  if (from.IsUnscopedEnum()) {
    // Get the enumeration underlying type and promote it.
    return DoIntegralPromotion(target, from.GetEnumerationIntegerType(target));
  }

  // At this point the type should an integer.
  assert(from.IsInteger() && "invalid type: must be an integer");

  // Get the underlying builtin representation.
  lldb::BasicType builtin_type = from.GetCanonicalType().GetBasicType();

  if (builtin_type == lldb::eBasicTypeWChar ||
      builtin_type == lldb::eBasicTypeSignedWChar ||
      builtin_type == lldb::eBasicTypeUnsignedWChar ||
      builtin_type == lldb::eBasicTypeChar16 ||
      builtin_type == lldb::eBasicTypeChar32) {
    // Find the type that can hold the entire range of values for our type.
    bool is_signed = from.IsSigned();
    uint64_t from_size = from.GetByteSize();

    lldb::SBType promote_types[] = {
        target.GetBasicType(lldb::eBasicTypeInt),
        target.GetBasicType(lldb::eBasicTypeUnsignedInt),
        target.GetBasicType(lldb::eBasicTypeLong),
        target.GetBasicType(lldb::eBasicTypeUnsignedLong),
        target.GetBasicType(lldb::eBasicTypeLongLong),
        target.GetBasicType(lldb::eBasicTypeUnsignedLongLong),
    };
    for (lldb::SBType& type : promote_types) {
      if (from_size < type.GetByteSize() ||
          (from_size == type.GetByteSize() &&
           is_signed == (bool)(type.GetTypeFlags() & lldb::eTypeIsSigned))) {
        return type;
      }
    }

    lldb_eval_unreachable("char type should fit into long long");
  }

  // Here we can promote only to "int" or "unsigned int".
  lldb::SBType int_type = target.GetBasicType(lldb::eBasicTypeInt);

  // Signed integer types can be safely promoted to "int".
  if (from.IsSigned()) {
    return int_type;
  }
  // Unsigned integer types are promoted to "unsigned int" if "int" cannot hold
  // their entire value range.
  return (from.GetByteSize() == int_type.GetByteSize())
             ? target.GetBasicType(lldb::eBasicTypeUnsignedInt)
             : int_type;
}

static ExprResult UsualUnaryConversions(lldb::SBTarget target,
                                        ExprResult expr) {
  // Perform usual conversions for unary operators. At the moment this includes
  // array-to-pointer and the integral promotion for eligible types.
  Type result_type = expr->result_type();

  // TODO(werat): Promote bitfields: e.g. uint32_t:10 -> int (not unsigned int).

  if (result_type.IsArrayType()) {
    // TODO(werat): Make this an explicit array-to-pointer conversion.
    expr = std::make_unique<CStyleCastNode>(
        result_type.GetArrayElementType().GetPointerType(), std::move(expr),
        CStyleCastKind::kPointer);
  }

  if (result_type.IsInteger() || result_type.IsUnscopedEnum()) {
    lldb::SBType promoted_type = DoIntegralPromotion(target, result_type);

    // Insert a cast if the type promotion is happening.
    // TODO(werat): Make this an implicit static_cast.
    if (!CompareTypes(promoted_type, result_type)) {
      expr = std::make_unique<CStyleCastNode>(promoted_type, std::move(expr),
                                              CStyleCastKind::kArithmetic);
    }
  }

  return expr;
}

static size_t ConversionRank(lldb::SBType type) {
  // Get integer conversion rank
  // https://eel.is/c++draft/conv.rank
  switch (type.GetCanonicalType().GetBasicType()) {
    case lldb::eBasicTypeBool:
      return 1;
    case lldb::eBasicTypeChar:
    case lldb::eBasicTypeSignedChar:
    case lldb::eBasicTypeUnsignedChar:
      return 2;
    case lldb::eBasicTypeShort:
    case lldb::eBasicTypeUnsignedShort:
      return 3;
    case lldb::eBasicTypeInt:
    case lldb::eBasicTypeUnsignedInt:
      return 4;
    case lldb::eBasicTypeLong:
    case lldb::eBasicTypeUnsignedLong:
      return 5;
    case lldb::eBasicTypeLongLong:
    case lldb::eBasicTypeUnsignedLongLong:
      return 6;

      // TODO: The ranks of char16_t, char32_t, and wchar_t are equal to the
      // ranks of their underlying types.
    case lldb::eBasicTypeWChar:
    case lldb::eBasicTypeSignedWChar:
    case lldb::eBasicTypeUnsignedWChar:
      return 3;
    case lldb::eBasicTypeChar16:
      return 3;
    case lldb::eBasicTypeChar32:
      return 4;

    default:
      break;
  }
  return 0;
}

static lldb::BasicType BasicTypeToUnsigned(lldb::BasicType basic_type) {
  switch (basic_type) {
    case lldb::eBasicTypeInt:
      return lldb::eBasicTypeUnsignedInt;
    case lldb::eBasicTypeLong:
      return lldb::eBasicTypeUnsignedLong;
    case lldb::eBasicTypeLongLong:
      return lldb::eBasicTypeUnsignedLongLong;
    default:
      return basic_type;
  }
}

static void PerformIntegerConversions(lldb::SBTarget target, ExprResult& l,
                                      ExprResult& r) {
  // Assert that rank(l) < rank(r).
  Type l_type = l->result_type_deref();
  Type r_type = r->result_type_deref();

  // if `r` is signed and `l` is unsigned, check whether it can represent all
  // of the values of the type of the `l`. If not, then promote `r` to the
  // unsigned version of its type.
  if (r_type.IsSigned() && !l_type.IsSigned()) {
    uint64_t l_size = l_type.GetByteSize();
    uint64_t r_size = r_type.GetByteSize();

    assert(l_size <= r_size && "left value must not be larger then the right!");

    if (r_size == l_size) {
      lldb::SBType r_type_unsigned = target.GetBasicType(
          BasicTypeToUnsigned(r_type.GetCanonicalType().GetBasicType()));
      r = std::make_unique<CStyleCastNode>(r_type_unsigned, std::move(r),
                                           CStyleCastKind::kArithmetic);
    }
  }

  l = std::make_unique<CStyleCastNode>(r->result_type(), std::move(l),
                                       CStyleCastKind::kArithmetic);
}

static lldb::SBType UsualArithmeticConversions(lldb::SBTarget target,
                                               ExprResult& lhs,
                                               ExprResult& rhs) {
  // Apply unary conversions (e.g. intergal promotion) for both operands.
  lhs = UsualUnaryConversions(target, std::move(lhs));
  rhs = UsualUnaryConversions(target, std::move(rhs));

  Type lhs_type = lhs->result_type_deref();
  Type rhs_type = rhs->result_type_deref();

  if (CompareTypes(lhs_type, rhs_type)) {
    return lhs_type;
  }

  // If either of the operands is not arithmetic (e.g. pointer), we're done.
  if (!lhs_type.IsScalar() || !rhs_type.IsScalar()) {
    return {};
  }

  // Handle conversions for floating types (float, double).
  if (lhs_type.IsFloat() || rhs_type.IsFloat()) {
    // If both are floats, convert the smaller operand to the bigger.
    if (lhs_type.IsFloat() && rhs_type.IsFloat()) {
      int order = lhs_type.GetBasicType() - rhs_type.GetBasicType();
      if (order > 0) {
        rhs = std::make_unique<CStyleCastNode>(lhs_type, std::move(rhs),
                                               CStyleCastKind::kArithmetic);
        return lhs_type;
      }
      assert(order < 0 && "illegal operands: must not be of the same type");
      lhs = std::make_unique<CStyleCastNode>(rhs_type, std::move(lhs),
                                             CStyleCastKind::kArithmetic);
      return rhs_type;
    }

    if (lhs_type.IsFloat()) {
      assert(rhs_type.IsInteger() && "illegal operand: must be an integer");
      rhs = std::make_unique<CStyleCastNode>(lhs_type, std::move(rhs),
                                             CStyleCastKind::kArithmetic);
      return lhs_type;
    }
    assert(rhs_type.IsFloat() && "illegal operand: must be a float");
    lhs = std::make_unique<CStyleCastNode>(rhs_type, std::move(lhs),
                                           CStyleCastKind::kArithmetic);
    return rhs_type;
  }

  // Handle conversion for integer types.
  assert((lhs_type.IsInteger() && rhs_type.IsInteger()) &&
         "illegal operands: must be both integers");

  using Rank = std::tuple<size_t, bool>;
  Rank l_rank = {ConversionRank(lhs_type), !lhs_type.IsSigned()};
  Rank r_rank = {ConversionRank(rhs_type), !rhs_type.IsSigned()};

  if (l_rank < r_rank) {
    PerformIntegerConversions(target, lhs, rhs);
  } else if (l_rank > r_rank) {
    PerformIntegerConversions(target, rhs, lhs);
  }

  assert(CompareTypes(lhs->result_type_deref(), rhs->result_type_deref()) &&
         "operands result types must be the same");

  return lhs->result_type_deref().GetCanonicalType();
}

static uint32_t GetNumberOfNonEmptyBaseClasses(lldb::SBType type) {
  // Go through the base classes and count non-empty ones.
  uint32_t ret = 0;
  uint32_t num_direct_bases = type.GetNumberOfDirectBaseClasses();

  for (uint32_t i = 0; i < num_direct_bases; ++i) {
    lldb::SBTypeMember base = type.GetDirectBaseClassAtIndex(i);
    lldb::SBType base_type = base.GetType();
    if (base_type.GetNumberOfFields() > 0 ||
        GetNumberOfNonEmptyBaseClasses(base_type) > 0) {
      ret += 1;
    }
  }
  return ret;
}

static lldb::SBTypeMember GetFieldWithNameIndexPath(
    lldb::SBType type, const std::string& name, std::vector<uint32_t>* idx) {
  // Go through the fields first.
  uint32_t num_fields = type.GetNumberOfFields();
  for (uint32_t i = 0; i < num_fields; ++i) {
    lldb::SBTypeMember field = type.GetFieldAtIndex(i);
    // Name can be null if this is a padding field.
    if (const char* field_name = field.GetName()) {
      if (field_name == name) {
        if (idx) {
          // Direct base classes are located before fields, so field members
          // needs to be offset by the number of base classes.
          idx->push_back(i + GetNumberOfNonEmptyBaseClasses(type));
        }
        return field;
      }
    }
  }

  // Go through the base classes and look for the field there.
  uint32_t num_non_empty_bases = 0;
  uint32_t num_direct_bases = type.GetNumberOfDirectBaseClasses();
  for (uint32_t i = 0; i < num_direct_bases; ++i) {
    lldb::SBType base = type.GetDirectBaseClassAtIndex(i).GetType();
    lldb::SBTypeMember field = GetFieldWithNameIndexPath(base, name, idx);
    if (field) {
      if (idx) {
        idx->push_back(num_non_empty_bases);
      }
      return field;
    }
    if (base.GetNumberOfFields() > 0) {
      num_non_empty_bases += 1;
    }
  }

  return lldb::SBTypeMember();
}

static std::tuple<lldb::SBTypeMember, std::vector<uint32_t>> GetFieldWithName(
    lldb::SBType type, const std::string& name) {
  std::vector<uint32_t> idx;
  lldb::SBTypeMember member = GetFieldWithNameIndexPath(type, name, &idx);
  std::reverse(idx.begin(), idx.end());
  return {member, std::move(idx)};
}

std::string TypeDeclaration::GetName() const {
  // Full name is a combination of a base name and pointer operators.
  std::string name = GetBaseName();

  // In LLDB pointer operators are separated with a single whitespace.
  if (ptr_operators_.size() > 0) {
    name.append(" ");
  }
  for (auto& [tok, _] : ptr_operators_) {
    if (tok == clang::tok::star) {
      name.append("*");
    } else if (tok == clang::tok::amp) {
      name.append("&");
    }
  }
  return name;
}

std::string TypeDeclaration::GetBaseName() const {
  // TODO(werat): Implement more robust textual type representation.
  std::string base_name = llvm::formatv(
      "{0:$[ ]}", llvm::make_range(typenames_.begin(), typenames_.end()));

  // TODO(werat): Handle these type aliases and detect invalid type combinations
  // (e.g. "long char") during the TypeDeclaration construction.
  StringReplace(base_name, "short int", "short");
  StringReplace(base_name, "long int", "long");

  return base_name;
}

Parser::Parser(std::shared_ptr<Context> ctx) : ctx_(std::move(ctx)) {
  target_ = ctx_->GetExecutionContext().GetTarget();

  clang::SourceManager& sm = ctx_->GetSourceManager();
  clang::DiagnosticsEngine& de = sm.getDiagnostics();

  auto tOpts = std::make_shared<clang::TargetOptions>();
  tOpts->Triple = llvm::sys::getDefaultTargetTriple();

  ti_.reset(clang::TargetInfo::CreateTargetInfo(de, tOpts));

  lang_opts_ = std::make_unique<clang::LangOptions>();
  lang_opts_->Bool = true;
  lang_opts_->WChar = true;
  lang_opts_->CPlusPlus = true;
  lang_opts_->CPlusPlus11 = true;
  lang_opts_->CPlusPlus14 = true;
  lang_opts_->CPlusPlus17 = true;

  tml_ = std::make_unique<clang::TrivialModuleLoader>();

  auto hOpts = std::make_shared<clang::HeaderSearchOptions>();
  hs_ = std::make_unique<clang::HeaderSearch>(hOpts, sm, de, *lang_opts_,
                                              ti_.get());

  auto pOpts = std::make_shared<clang::PreprocessorOptions>();
  pp_ = std::make_unique<clang::Preprocessor>(pOpts, de, *lang_opts_, sm, *hs_,
                                              *tml_);
  pp_->Initialize(*ti_);
  pp_->EnterMainSourceFile();

  // Initialize the token.
  token_.setKind(clang::tok::unknown);
}

ExprResult Parser::Run(Error& error) {
  ConsumeToken();
  auto expr = ParseExpression();
  Expect(clang::tok::eof);

  error = error_;
  error_.Clear();

  // Explicitly return ErrorNode if there was an error during the parsing. Some
  // routines raise an error, but don't change the return value (e.g. Expect).
  if (error) {
    return std::make_unique<ErrorNode>();
  }
  return expr;
}

std::string Parser::TokenDescription(const clang::Token& token) {
  const auto& spelling = pp_->getSpelling(token);
  const auto* kind_name = token.getName();
  return llvm::formatv("<'{0}' ({1})>", spelling, kind_name);
}

void Parser::Expect(clang::tok::TokenKind kind) {
  if (token_.isNot(kind)) {
    BailOut(ErrorCode::kUnknown,
            llvm::formatv("expected {0}, got: {1}", TokenKindsJoin(kind),
                          TokenDescription(token_)),
            token_.getLocation());
  }
}

template <typename... Ts>
void Parser::ExpectOneOf(clang::tok::TokenKind k, Ts... ks) {
  static_assert((std::is_same_v<Ts, clang::tok::TokenKind> && ...),
                "ExpectOneOf can be only called with values of type "
                "clang::tok::TokenKind");

  if (!token_.isOneOf(k, ks...)) {
    BailOut(ErrorCode::kUnknown,
            llvm::formatv("expected any of ({0}), got: {1}",
                          TokenKindsJoin(k, ks...), TokenDescription(token_)),
            token_.getLocation());
  }
}

void Parser::ConsumeToken() {
  if (token_.is(clang::tok::eof)) {
    // Don't do anything if we're already at eof. This can happen if an error
    // occurred during parsing and we're trying to bail out.
    return;
  }
  pp_->Lex(token_);
}

void Parser::BailOut(ErrorCode code, const std::string& error,
                     clang::SourceLocation loc) {
  if (error_) {
    // If error is already set, then the parser is in the "bail-out" mode. Don't
    // do anything and keep the original error.
    return;
  }

  error_.Set(code, FormatDiagnostics(ctx_->GetSourceManager(), error, loc));
  token_.setKind(clang::tok::eof);
}

// Parse an expression.
//
//  expression:
//    assignment_expression
//
ExprResult Parser::ParseExpression() { return ParseAssignmentExpression(); }

// Parse an assigment_expression.
//
//  assignment_expression:
//    conditional_expression
//
ExprResult Parser::ParseAssignmentExpression() {
  return ParseConditionalExpression();
}

// Parse a conditional_expression
//
//  conditional_expression:
//    logical_or_expression
//    logical_or_expression "?" expression ":" assignment_expression
//
ExprResult Parser::ParseConditionalExpression() {
  auto lhs = ParseLogicalOrExpression();

  if (token_.is(clang::tok::question)) {
    clang::Token token = token_;
    ConsumeToken();
    auto true_val = ParseExpression();
    Expect(clang::tok::colon);
    ConsumeToken();
    auto false_val = ParseAssignmentExpression();
    lhs = BuildTernaryOp(std::move(lhs), std::move(true_val),
                         std::move(false_val), token.getLocation());
  }

  return lhs;
}

// Parse a logical_or_expression.
//
//  logical_or_expression:
//    logical_and_expression {"||" logical_and_expression}
//
ExprResult Parser::ParseLogicalOrExpression() {
  auto lhs = ParseLogicalAndExpression();

  while (token_.is(clang::tok::pipepipe)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseLogicalAndExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse a logical_and_expression.
//
//  logical_and_expression:
//    inclusive_or_expression {"&&" inclusive_or_expression}
//
ExprResult Parser::ParseLogicalAndExpression() {
  auto lhs = ParseInclusiveOrExpression();

  while (token_.is(clang::tok::ampamp)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseInclusiveOrExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse an inclusive_or_expression.
//
//  inclusive_or_expression:
//    exclusive_or_expression {"|" exclusive_or_expression}
//
ExprResult Parser::ParseInclusiveOrExpression() {
  auto lhs = ParseExclusiveOrExpression();

  while (token_.is(clang::tok::pipe)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseExclusiveOrExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse an exclusive_or_expression.
//
//  exclusive_or_expression:
//    and_expression {"^" and_expression}
//
ExprResult Parser::ParseExclusiveOrExpression() {
  auto lhs = ParseAndExpression();

  while (token_.is(clang::tok::caret)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseAndExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse an and_expression.
//
//  and_expression:
//    equality_expression {"&" equality_expression}
//
ExprResult Parser::ParseAndExpression() {
  auto lhs = ParseEqualityExpression();

  while (token_.is(clang::tok::amp)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseEqualityExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse an equality_expression.
//
//  equality_expression:
//    relational_expression {"==" relational_expression}
//    relational_expression {"!=" relational_expression}
//
ExprResult Parser::ParseEqualityExpression() {
  auto lhs = ParseRelationalExpression();

  while (token_.isOneOf(clang::tok::equalequal, clang::tok::exclaimequal)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseRelationalExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse a relational_expression.
//
//  relational_expression:
//    shift_expression {"<" shift_expression}
//    shift_expression {">" shift_expression}
//    shift_expression {"<=" shift_expression}
//    shift_expression {">=" shift_expression}
//
ExprResult Parser::ParseRelationalExpression() {
  auto lhs = ParseShiftExpression();

  while (token_.isOneOf(clang::tok::less, clang::tok::greater,
                        clang::tok::lessequal, clang::tok::greaterequal)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseShiftExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse a shift_expression.
//
//  shift_expression:
//    additive_expression {"<<" additive_expression}
//    additive_expression {">>" additive_expression}
//
ExprResult Parser::ParseShiftExpression() {
  auto lhs = ParseAdditiveExpression();

  while (token_.isOneOf(clang::tok::lessless, clang::tok::greatergreater)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseAdditiveExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse an additive_expression.
//
//  additive_expression:
//    multiplicative_expression {"+" multiplicative_expression}
//    multiplicative_expression {"-" multiplicative_expression}
//
ExprResult Parser::ParseAdditiveExpression() {
  auto lhs = ParseMultiplicativeExpression();

  while (token_.isOneOf(clang::tok::plus, clang::tok::minus)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseMultiplicativeExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse a multiplicative_expression.
//
//  multiplicative_expression:
//    cast_expression {"*" cast_expression}
//    cast_expression {"/" cast_expression}
//    cast_expression {"%" cast_expression}
//
ExprResult Parser::ParseMultiplicativeExpression() {
  auto lhs = ParseCastExpression();

  while (token_.isOneOf(clang::tok::star, clang::tok::slash,
                        clang::tok::percent)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseCastExpression();
    lhs = BuildBinaryOp(token.getKind(), std::move(lhs), std::move(rhs),
                        token.getLocation());
  }

  return lhs;
}

// Parse a cast_expression.
//
//  cast_expression:
//    unary_expression
//    "(" type_id ")" cast_expression
//
ExprResult Parser::ParseCastExpression() {
  // This can be a C-style cast, try parsing the contents as a type declaration.
  if (token_.is(clang::tok::l_paren)) {
    clang::Token token = token_;

    // Enable lexer backtracking, so that we can rollback in case it's not
    // actually a type declaration.
    TentativeParsingAction tentative_parsing(this);

    // Consume the token only after enabling the backtracking.
    ConsumeToken();

    // Try parsing the type declaration. If the returned value is not valid,
    // then we should rollback and try parsing the expression.
    TypeDeclaration type_decl = ParseTypeId();

    // Try resolving base type of the type declaration.
    // TODO(werat): Resolve the type and the declarators during parsing to save
    // time and produce more accurate diagnostics.
    lldb::SBType type = ResolveTypeFromTypeDecl(type_decl);

    if (type) {
      // Successfully parsed the type declaration. Commit the backtracked
      // tokens and parse the cast_expression.
      tentative_parsing.Commit();

      // Apply type declarators (i.e. pointer/reference qualifiers).
      type = ResolveTypeDeclarators(type, type_decl);
      if (!type) {
        return std::make_unique<ErrorNode>();
      }

      Expect(clang::tok::r_paren);
      ConsumeToken();
      auto rhs = ParseCastExpression();

      return BuildCStyleCast(type, std::move(rhs), token.getLocation());

    } else {
      // Failed to parse the contents of the parentheses as a type declaration.
      // Rollback the lexer and try parsing it as unary_expression.
      tentative_parsing.Rollback();
    }
  }

  return ParseUnaryExpression();
}

// Parse an unary_expression.
//
//  unary_expression:
//    postfix_expression
//    "++" cast_expression
//    "--" cast_expression
//    unary_operator cast_expression
//
//  unary_operator:
//    "&"
//    "*"
//    "+"
//    "-"
//    "~"
//    "!"
//
ExprResult Parser::ParseUnaryExpression() {
  if (token_.isOneOf(clang::tok::plusplus, clang::tok::minusminus,
                     clang::tok::star, clang::tok::amp, clang::tok::plus,
                     clang::tok::minus, clang::tok::exclaim,
                     clang::tok::tilde)) {
    clang::Token token = token_;
    ConsumeToken();
    auto rhs = ParseCastExpression();
    return BuildUnaryOp(token.getKind(), std::move(rhs), token.getLocation());
  }

  return ParsePostfixExpression();
}
